2008-10-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Run new hook
	webadmin_user_parse_query when POST in web admin user
	page (thanks to Oleg Palij)(EJAB-747)
	* src/mod_offline.erl: Add button "Remove All Offline Messages" in
	a user page (thanks to Oleg Palij)(EJAB-747)
	* src/mod_offline_odbc.erl: Likewise

	* src/web/ejabberd_web_admin.erl: Improve Web Admin navigation
	menu for vhosts and nodes (EJAB-734)

	* doc/guide.tex: Explain the new ejabberdctl command 'help'
	* doc/guide.html: Likewise

	* src/mod_configure.erl: Update calls from ctl to
	commands (EJAB-694)
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/ejabberd_sm.erl: Update from ctl to commands (EJAB-694)
	* src/ejabberd_s2s.erl: Likewise

	* src/ejabberd_auth.erl: Update from ctl to commands (EJAB-694)
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise

	* src/ejabberdctl.template: Move help print to a separate
	function (EJAB-694)

	* src/ejabberd_ctl.erl: Add frontend support for
	commands (EJAB-694). Categorization and sorting of commands in
	ejabberd_ctl help (EJAB-313). Lines in command line help of length
	80, and text formatting (EJAB-473)

	* src/ejabberd_app.erl: Initialize ejabberd_commands and start
	ejabbed_admin (EJAB-694)

	* src/ejabberd_admin.erl: Implement commands from old
	ejabberd_ctl (EJAB-694)

	* src/ejabberd_commands.erl: New 'ejabberd commands': separate
	command definition and calling interface (EJAB-694)
	* src/ejabberd_commands.hrl: Likewise

	* src/mod_proxy65/mod_proxy65.erl: Update so the listener starts
	correctly (EJAB-303)
	* src/mod_proxy65/mod_proxy65_service.erl: Likewise

	* src/ejabberd_app.erl: Start listeners explicitely at server
	start after everything else (EJAB-303). Implement support in
	ejabberd for 'independent listeners', which handle their
	connections themselves: gen_tcp:listen, etc.
	* src/ejabberd_listener.erl: Likewise